--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="position: relative;">
+  <!-- <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
   <app-root></app-root>
-
 </body>
 </html>
